--- a/public/medialog.html
+++ b/public/medialog.html
@@ -1,168 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>a midsummer jay's zone - shrines</title>
+<head>
+	<title>a midsummer jay's zone - shrines</title>
 	<meta name="description" content="a midsummer jay's zone - media log" />
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-    <meta content="utf-8" http-equiv="encoding" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./images/favicon.ico" rel="icon" type="image/x-icon" />
-    <link href="./style.css" rel="stylesheet" />
-    <script src="./layout.js"></script>
-    <script>
+	<meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+	<meta content="utf-8" http-equiv="encoding" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link href="./images/favicon.ico" rel="icon" type="image/x-icon" />
+	<link href="./style.css" rel="stylesheet" />
+	<script src="./layout.js"></script>
+	<script>
       // Template generated with petrapixel's layout generator.
       // Please do not remove this.
-      console.log("%c Template generated with petrapixel's layout generator.", "font-size: 14pt;");
-      console.log("%c https://petrapixel.neocities.org/coding/layout-generator", "font-size: 14pt;");
-    </script>
-  </head>
-  <body>
-    <!-- The next line is a skip-to-content link for keyboard users. Do not remove it! -->
-    <a href="#content" id="skip-to-content-link">Skip to content</a>
-    <div class="layout">
-	<noscript>Please enable JavaScript to view this website!</noscript>
-	
-      
-<main id="content">
-        <section>
-          <h1>media log</h1>
-           <button type="button" class="collapsible parent active"><span class="collapsetoken">➜</span> 2025</button>
-			<div class="collapsecontent" style="display: block;">
-			  <button type="button" class="collapsible child active"><span class="collapsetoken">➜</span> books</button>
-			  	<div class="childcollapsecontent" style="display: block;">
-				  	<a href="https://app.thestorygraph.com/books/9f4bb675-20a7-441c-a341-559c09431914" target="_blank">
-				  		<figure>
-		               		<img src="./images/medialog/books/goodneighbors.jpg">
-		               		<figcaption>
-		               			<b>good neighbors</b><br />
-		               			<i>sarah langan</i><br />
-		               			<b><i>finished:</i></b> 01/03/2025<br />
-		               			<b><i>rating:</i></b>★★★★☆
-		               		</figcaption>
-		               	</figure>
-		            </a>
-		            <a href="https://app.thestorygraph.com/books/387895b3-364b-4008-9b5f-32fcc0ce546f" target="_blank">
-				  		<figure>
-		               		<img src="./images/medialog/books/wwbu.jpg">
-		               		<figcaption>
-		               			<b>why we broke up</b><br />
-		               			<i>daniel handler</i><br />
-		               			<b><i>finished:</i></b> 01/07/2025<br />
-		               			<b><i>rating:</i></b>★★★☆☆
-		               		</figcaption>
-		               	</figure>
-		            </a>
-		            <a href="https://app.thestorygraph.com/books/5cbefe3c-446c-4f1c-9cd4-b4ec23bee01c" target="_blank">
-				  		<figure>
-		               		<img src="./images/medialog/books/tgotw.JPG">
-		               		<figcaption>
-		               			<b>the god of the woods</b><br />
-		               			<i>liz moore</i><br />
-		               			<b><i>finished:</i></b> 01/10/2025<br />
-		               			<b><i>rating:</i></b>★★★★☆
-		               		</figcaption>
-		               	</figure>
-		            </a>
-		            <a href="https://app.thestorygraph.com/books/6f6c6738-b20e-4e56-a973-f80458dc0058" target="_blank">
-				  		<figure>
-		               		<img src="./images/medialog/books/crying49.jpg">
-		               		<figcaption>
-		               			<b>the crying of lot 49</b><br />
-		               			<i>thomas pynchon</i><br />
-		               			<b><i>finished:</i></b> 02/02/2025<br />
-		               			<b><i>rating:</i></b>★★★⯪☆
-		               		</figcaption>
-		               	</figure>
-		            </a>
-		            <a href="https://app.thestorygraph.com/books/666adeca-a8fd-4381-8cfa-9bc0a76c0a26" target="_blank">
-				  		<figure>
-		               		<img src="./images/medialog/books/tmc.jpg">
-		               		<figcaption>
-		               			<b>this mortal coil</b><br />
-		               			<i>emily suvada</i><br />
-		               			<b><i>finished:</i></b> 02/11/2025<br />
-		               			<b><i>rating:</i></b>★★☆☆☆
-		               		</figcaption>
-		               	</figure>
-		            </a>
-		            <a href="https://app.thestorygraph.com/books/7a58d916-e8be-416f-b1ad-b0726524163b" target="_blank">
-				  		<figure>
-		               		<img src="./images/medialog/books/tjt.jpg">
-		               		<figcaption>
-		               			<b>the jasmine throne</b><br />
-		               			<i>tasha suri</i><br />
-		               			<b><i>finished:</i></b> 02/22/2025<br />
-		               			<b><i>rating:</i></b>★★★★☆
-		               		</figcaption>
-		               	</figure>
-		            </a>
-		            <a href="https://app.thestorygraph.com/books/0885d5f1-edc2-435f-b17c-7e881829dbc6" target="_blank">
-				  		<figure>
-		               		<img src="./images/medialog/books/allsystemsred.jpg">
-		               		<figcaption>
-		               			<b>all systems red</b><br />
-		               			<i>martha wells</i><br />
-		               			<b><i>finished:</i></b> 02/28/2025<br />
-		               			<b><i>rating:</i></b>★★★⯪☆
-		               		</figcaption>
-		               	</figure>
-		            </a>
-		            <a href="https://app.thestorygraph.com/books/8e34ba9e-26c2-44a0-a02f-85c9cc8d5c05" target="_blank">
-				  		<figure>
-		               		<img src="./images/medialog/books/bwway.jpg">
-		               		<figcaption>
-		               			<b>beautiful world, where are you</b><br />
-		               			<i>sally rooney</i><br />
-		               			<b><i>finished:</i></b> 03/05/2025<br />
-		               			<b><i>rating:</i></b>★★★⯪☆
-		               		</figcaption>
-		               	</figure>
-		            </a>
-				</div>
-			  <button type="button" class="collapsible child active"><span class="collapsetoken">➜</span> movies</button>
-			  	<div class="childcollapsecontent" style="display: block;">
-			  		<a href="https://letterboxd.com/mirenscene/film/oceans-eleven-2001/" target="_blank">
-				  		<figure>
-		               		<img src="./images/medialog/movies/o11.jpg">
-		               		<figcaption>
-		               			<b>ocean's eleven</b><br />
-		               			<b><i>watched:</i></b> 01/13/2025<br />
-		               			<b><i>rating:</i></b>★★★★★
-		               		</figcaption>
-		               	</figure>
-		            </a>
-		            <a href="https://letterboxd.com/mirenscene/film/burn-after-reading/" target="_blank">
-				  		<figure>
-		               		<img src="./images/medialog/movies/bar.jpg">
-		               		<figcaption>
-		               			<b>burn after reading</b><br />
-		               			<b><i>watched:</i></b> 01/14/2025<br />
-		               			<b><i>rating:</i></b>★★★★☆
-		               		</figcaption>
-		               	</figure>
-		            </a>
-			  	</div>
-			</div> 
-        </section>
-      </main>
+		console.log("%c Template generated with petrapixel's layout generator.", "font-size: 14pt;");
+		console.log("%c https://petrapixel.neocities.org/coding/layout-generator", "font-size: 14pt;");
+	</script>
+</head>
+<body>
+	<!-- The next line is a skip-to-content link for keyboard users. Do not remove it! -->
+	<a href="#content" id="skip-to-content-link">Skip to content</a>
+	<div class="layout">
+		<noscript>Please enable JavaScript to view this website!</noscript>
 
-</div>
-    <!-- Add any additional Javascript code (<script></script>) here. -->
-    <script>
-    	var coll = document.getElementsByClassName("collapsible");
+
+		<main id="content">
+			<section>
+				<h1>media log</h1>
+				<button type="button" class="collapsible parent active"><span class="collapsetoken">➜</span> 2025</button>
+				<div class="collapsecontent" style="display: block;">
+					<button type="button" class="collapsible child active"><span class="collapsetoken">➜</span> books</button>
+					<div class="childcollapsecontent" style="display: block;">
+						<a href="https://app.thestorygraph.com/books/9f4bb675-20a7-441c-a341-559c09431914" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/goodneighbors.jpg">
+								<figcaption>
+									<b>good neighbors</b><br />
+									<i>sarah langan</i><br />
+									<b><i>finished:</i></b> 01/03/2025<br />
+									<b><i>rating:</i></b>★★★★☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://app.thestorygraph.com/books/387895b3-364b-4008-9b5f-32fcc0ce546f" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/wwbu.jpg">
+								<figcaption>
+									<b>why we broke up</b><br />
+									<i>daniel handler</i><br />
+									<b><i>finished:</i></b> 01/07/2025<br />
+									<b><i>rating:</i></b>★★★☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://app.thestorygraph.com/books/5cbefe3c-446c-4f1c-9cd4-b4ec23bee01c" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/tgotw.JPG">
+								<figcaption>
+									<b>the god of the woods</b><br />
+									<i>liz moore</i><br />
+									<b><i>finished:</i></b> 01/10/2025<br />
+									<b><i>rating:</i></b>★★★★☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://app.thestorygraph.com/books/6f6c6738-b20e-4e56-a973-f80458dc0058" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/crying49.jpg">
+								<figcaption>
+									<b>the crying of lot 49</b><br />
+									<i>thomas pynchon</i><br />
+									<b><i>finished:</i></b> 02/02/2025<br />
+									<b><i>rating:</i></b>★★★⯪☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://app.thestorygraph.com/books/666adeca-a8fd-4381-8cfa-9bc0a76c0a26" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/tmc.jpg">
+								<figcaption>
+									<b>this mortal coil</b><br />
+									<i>emily suvada</i><br />
+									<b><i>finished:</i></b> 02/11/2025<br />
+									<b><i>rating:</i></b>★★☆☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://app.thestorygraph.com/books/7a58d916-e8be-416f-b1ad-b0726524163b" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/tjt.jpg">
+								<figcaption>
+									<b>the jasmine throne</b><br />
+									<i>tasha suri</i><br />
+									<b><i>finished:</i></b> 02/22/2025<br />
+									<b><i>rating:</i></b>★★★★☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://app.thestorygraph.com/books/0885d5f1-edc2-435f-b17c-7e881829dbc6" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/allsystemsred.jpg">
+								<figcaption>
+									<b>all systems red</b><br />
+									<i>martha wells</i><br />
+									<b><i>finished:</i></b> 02/28/2025<br />
+									<b><i>rating:</i></b>★★★⯪☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://app.thestorygraph.com/books/8e34ba9e-26c2-44a0-a02f-85c9cc8d5c05" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/bwway.jpg">
+								<figcaption>
+									<b>beautiful world, where are you</b><br />
+									<i>sally rooney</i><br />
+									<b><i>finished:</i></b> 03/05/2025<br />
+									<b><i>rating:</i></b>★★★⯪☆
+								</figcaption>
+							</figure>
+						</a>
+					</div>
+					<button type="button" class="collapsible child active"><span class="collapsetoken">➜</span> movies</button>
+					<div class="childcollapsecontent" style="display: block;">
+						<a href="https://letterboxd.com/mirenscene/film/oceans-eleven-2001/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/o11.jpg">
+								<figcaption>
+									<b>ocean's eleven</b><br />
+									<b><i>watched:</i></b> 01/13/2025<br />
+									<b><i>rating:</i></b>★★★★★
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/burn-after-reading/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/bar.jpg">
+								<figcaption>
+									<b>burn after reading</b><br />
+									<b><i>watched:</i></b> 01/14/2025<br />
+									<b><i>rating:</i></b>★★★★☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/dial-m-for-murder/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/dmfm.jpg">
+								<figcaption>
+									<b>dial m for murder</b><br />
+									<b><i>watched:</i></b> 03/10/2025<br />
+									<b><i>rating:</i></b>★★★⯪☆
+								</figcaption>
+							</figure>
+						</a>
+					</div>
+				</div> 
+			</section>
+		</main>
+
+	</div>
+	<!-- Add any additional Javascript code (<script></script>) here. -->
+	<script>
+		var coll = document.getElementsByClassName("collapsible");
 		var i;
 
 		for (i = 0; i < coll.length; i++) {
-		  coll[i].addEventListener("click", function() {
-		    this.classList.toggle("active");
-		    var content = this.nextElementSibling;
-		    if (content.style.display === "block") {
-		      content.style.display = "none";
-		    } else {
-		      content.style.display = "block";
-		    }
-		  });
+			coll[i].addEventListener("click", function() {
+				this.classList.toggle("active");
+				var content = this.nextElementSibling;
+				if (content.style.display === "block") {
+					content.style.display = "none";
+				} else {
+					content.style.display = "block";
+				}
+			});
 		} 
-    </script>
-  </body>
+	</script>
+</body>
 </html>
