--- a/public/medialog.html
+++ b/public/medialog.html
@@ -118,6 +118,17 @@
 								</figcaption>
 							</figure>
 						</a>
+						<a href="https://app.thestorygraph.com/books/48df8625-af43-4df6-8ccf-5267ffac05e4" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/adadt.jpg">
+								<figcaption>
+									<b>a dark and drowning tide</b><br />
+									<i>allison saft</i><br />
+									<b><i>finished:</i></b> 03/10/2025<br />
+									<b><i>rating:</i></b>★★★★☆
+								</figcaption>
+							</figure>
+						</a>
 					</div>
 					<button type="button" class="collapsible child active"><span class="collapsetoken">➜</span> movies</button>
 					<div class="childcollapsecontent" style="display: block;">
