--- a/public/medialog.html
+++ b/public/medialog.html
@@ -125,7 +125,7 @@
 									<b>a dark and drowning tide</b><br />
 									<i>allison saft</i><br />
 									<b><i>finished:</i></b> 03/10/2025<br />
-									<b><i>rating:</i></b>★★★★☆
+									<b><i>rating:</i></b>★★★☆☆
 								</figcaption>
 							</figure>
 						</a>
