--- a/public/medialog.html
+++ b/public/medialog.html
@@ -129,6 +129,17 @@
 								</figcaption>
 							</figure>
 						</a>
+						<a href="https://app.thestorygraph.com/books/d2a7b3fa-90c7-4b20-aa46-f140664943fd" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/tlaos.jpg">
+								<figcaption>
+									<b>the lottery and other stories</b><br />
+									<i>shirley jackson</i><br />
+									<b><i>finished:</i></b> 03/16/2025<br />
+									<b><i>rating:</i></b>★★★★★
+								</figcaption>
+							</figure>
+						</a>
 					</div>
 					<button type="button" class="collapsible child active"><span class="collapsetoken">➜</span> movies</button>
 					<div class="childcollapsecontent" style="display: block;">
