--- a/public/medialog.html
+++ b/public/medialog.html
@@ -140,6 +140,17 @@
 								</figcaption>
 							</figure>
 						</a>
+						<a href="https://app.thestorygraph.com/books/dd60d941-21b9-421c-b475-2ee4106cbc7f" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/twp.jpg">
+								<figcaption>
+									<b>the wedding people</b><br />
+									<i>alison espach</i><br />
+									<b><i>finished:</i></b> 03/18/2025<br />
+									<b><i>rating:</i></b>★★★★☆
+								</figcaption>
+							</figure>
+						</a> <!-- last -->
 					</div>
 					<button type="button" class="collapsible child active"><span class="collapsetoken">➜</span> movies</button>
 					<div class="childcollapsecontent" style="display: block;">
