--- a/public/medialog.html
+++ b/public/medialog.html
@@ -184,6 +184,16 @@
 								</figcaption>
 							</figure>
 						</a>
+						<a href="https://letterboxd.com/mirenscene/film/rope/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/rope.jpg">
+								<figcaption>
+									<b>rope</b><br />
+									<b><i>watched:</i></b> 03/22/2025<br />
+									<b><i>rating:</i></b>★★★★⯪
+								</figcaption>
+							</figure>
+						</a>
 					</div>
 				</div> 
 			</section>
