blog and medialog update

--- a/public/medialog.html
+++ b/public/medialog.html
@@ -194,6 +194,36 @@
 								</figcaption>
 							</figure>
 						</a>
+						<a href="https://letterboxd.com/mirenscene/film/in-the-heights/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/ith.jpg">
+								<figcaption>
+									<b>in the heights</b><br />
+									<b><i>watched:</i></b> 05/20/2025<br />
+									<b><i>rating:</i></b>★★⯪☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/wicked/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/wckd.jpg">
+								<figcaption>
+									<b>wicked</b><br />
+									<b><i>watched:</i></b> 05/20/2025<br />
+									<b><i>rating:</i></b>★★⯪☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/dont-worry-darling/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/dwd.jpg">
+								<figcaption>
+									<b>don't worry darling</b><br />
+									<b><i>watched:</i></b> 05/20/2025<br />
+									<b><i>rating:</i></b>★★⯪☆☆
+								</figcaption>
+							</figure>
+						</a>
 					</div>
 				</div> 
 			</section>
