updated media log through end of year

--- a/public/medialog.html
+++ b/public/medialog.html
@@ -26,10 +26,94 @@
 		<main id="content">
 			<section>
 				<h1>media log</h1>
-				<button type="button" class="collapsible parent active"><span class="collapsetoken">➜</span> 2025</button>
+				<button type="button" class="collapsible parent active"><span class="collapsetoken">➜</span> 2026</button>
 				<div class="collapsecontent" style="display: block;">
 					<button type="button" class="collapsible child active"><span class="collapsetoken">➜</span> books</button>
 					<div class="childcollapsecontent" style="display: block;">
+						<a href="https://app.thestorygraph.com/books/f4aac413-68db-42e9-aba1-ee340db0b64d" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/stb.jpg">
+								<figcaption>
+									<b>salvage the bones</b><br />
+									<i>jesmyn ward</i><br />
+									<b><i>finished:</i></b> 01/04/2026<br />
+									<b><i>rating:</i></b>★★★★★
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://app.thestorygraph.com/books/8656a1b8-8e4d-45b3-b868-5e1110c466dc" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/tur.jpg">
+								<figcaption>
+									<b>the underground railroad</b><br />
+									<i>colson whitehead</i><br />
+									<b><i>finished:</i></b> 02/01/2026<br />
+									<b><i>rating:</i></b>★★★★☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://app.thestorygraph.com/books/6b48c25e-5b08-41a5-9838-183ecef462d9" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/ll.jpg">
+								<figcaption>
+									<b>lost lambs</b><br />
+									<i>madeline cash</i><br />
+									<b><i>finished:</i></b> 02/01/2026<br />
+									<b><i>rating:</i></b>★★⯪☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<!-- last! -->
+					</div>
+					<button type="button" class="collapsible child active"><span class="collapsetoken">➜</span> movies</button>
+					<div class="childcollapsecontent" style="display: block;">
+						<a href="https://letterboxd.com/mirenscene/film/conclave/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/cc.jpg">
+								<figcaption>
+									<b>conclave</b><br />
+									<b><i>watched:</i></b> 01/02/2026<br />
+									<b><i>rating:</i></b>★★★★⯪
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/split/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/split.jpg">
+								<figcaption>
+									<b>split</b><br />
+									<b><i>watched:</i></b> 01/15/2026<br />
+									<b><i>rating:</i></b>★⯪☆☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/the-grand-budapest-hotel/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/tgbh.jpg">
+								<figcaption>
+									<b>the grand budapest hotel</b><br />
+									<b><i>watched:</i></b> 01/21/2026<br />
+									<b><i>rating:</i></b>★★★★⯪
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/o-brother-where-art-thou/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/obwat.jpg">
+								<figcaption>
+									<b>o brother, where art thou?</b><br />
+									<b><i>watched:</i></b> 02/01/2026<br />
+									<b><i>rating:</i></b>★★★★☆
+								</figcaption>
+							</figure>
+						</a>
+						<!-- last! -->
+					</div>
+				</div>
+				<button type="button" class="collapsible parent active"><span class="collapsetoken">➜</span> 2025</button>
+				<div class="collapsecontent" style="display: block;">
+					<button type="button" class="collapsible child"><span class="collapsetoken">➜</span> books</button>
+					<div class="childcollapsecontent">
 						<a href="https://app.thestorygraph.com/books/9f4bb675-20a7-441c-a341-559c09431914" target="_blank">
 							<figure>
 								<img src="./images/medialog/books/goodneighbors.jpg">
@@ -125,7 +209,7 @@
 									<b>a dark and drowning tide</b><br />
 									<i>allison saft</i><br />
 									<b><i>finished:</i></b> 03/10/2025<br />
-									<b><i>rating:</i></b>★★★☆☆
+									<b><i>rating:</i></b>★★☆☆☆
 								</figcaption>
 							</figure>
 						</a>
@@ -150,10 +234,110 @@
 									<b><i>rating:</i></b>★★★★☆
 								</figcaption>
 							</figure>
-						</a> <!-- last -->
+						</a> 
+						<a href="https://app.thestorygraph.com/books/82cda351-2e3f-48d3-8308-b2cd3ffdd855" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/butter.png">
+								<figcaption>
+									<b>butter</b><br />
+									<i>asako yuzuki</i><br />
+									<b><i>finished:</i></b> 03/26/2025<br />
+									<b><i>rating:</i></b>★★★⯪☆
+								</figcaption>
+							</figure>
+						</a> 
+						<a href="https://app.thestorygraph.com/books/4e2161d3-6b7a-4692-a279-81369f1efbe9" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/wager.jpg">
+								<figcaption>
+									<b>the wager</b><br />
+									<i>david grann</i><br />
+									<b><i>finished:</i></b> 07/27/2025<br />
+									<b><i>rating:</i></b>★★★★★
+								</figcaption>
+							</figure>
+						</a> 
+						<a href="https://app.thestorygraph.com/books/c906e464-dc41-4f82-9601-77d9f3717994" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/pachinko.jpg">
+								<figcaption>
+									<b>pachinko</b><br />
+									<i>min jin lee</i><br />
+									<b><i>finished:</i></b> 08/27/2025<br />
+									<b><i>rating:</i></b>★★★★⯪
+								</figcaption>
+							</figure>
+						</a> 
+						<a href="https://app.thestorygraph.com/books/ef07e74a-cebd-488f-857f-a0473e0de10f" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/kotfm.jpg">
+								<figcaption>
+									<b>killers of the flower moon</b><br />
+									<i>david grann</i><br />
+									<b><i>finished:</i></b> 08/31/2025<br />
+									<b><i>rating:</i></b>★★★★⯪
+								</figcaption>
+							</figure>
+						</a> 
+						<a href="https://app.thestorygraph.com/books/66acc1c4-758c-4a5b-9cdc-c80363ca7610" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/cantoras.jpg">
+								<figcaption>
+									<b>cantoras</b><br />
+									<i>caro de robertis</i><br />
+									<b><i>finished:</i></b> 09/14/2025<br />
+									<b><i>rating:</i></b>★★★⯪☆
+								</figcaption>
+							</figure>
+						</a> 
+						<a href="https://app.thestorygraph.com/books/6cdc5944-f500-4da3-a364-d6ad45d2f95c" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/tafd.jpg">
+								<figcaption>
+									<b>they all fall down</b><br />
+									<i>rachel howzell hall</i><br />
+									<b><i>finished:</i></b> 10/20/2025<br />
+									<b><i>rating:</i></b>★★⯪☆☆
+								</figcaption>
+							</figure>
+						</a> 
+						<a href="https://app.thestorygraph.com/books/a7393ec0-1b73-4334-89a6-c6ac0d74d417" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/mafd.jpg">
+								<figcaption>
+									<b>monsters: a fan's dilemma</b><br />
+									<i>claire dederer</i><br />
+									<b><i>finished:</i></b> 11/09/2025<br />
+									<b><i>rating:</i></b>★☆☆☆☆
+								</figcaption>
+							</figure>
+						</a> 
+						<a href="https://app.thestorygraph.com/books/a4f97770-d661-4687-944e-89e02077190d" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/piranesi.jpg">
+								<figcaption>
+									<b>piranesi</b><br />
+									<i>susanna clarke</i><br />
+									<b><i>finished:</i></b> 12/07/2025<br />
+									<b><i>rating:</i></b>★★★★☆
+								</figcaption>
+							</figure>
+						</a> 
+						<a href="https://app.thestorygraph.com/books/619fa63e-20b5-4f94-8606-bc9571e7abd1" target="_blank">
+							<figure>
+								<img src="./images/medialog/books/itnotf.jpg">
+								<figcaption>
+									<b>in the name of the family</b><br />
+									<i>sarah dunant</i><br />
+									<b><i>finished:</i></b> 12/16/2025<br />
+									<b><i>rating:</i></b>★★★⯪☆
+								</figcaption>
+							</figure>
+						</a> 
+						<!-- last -->
 					</div>
-					<button type="button" class="collapsible child active"><span class="collapsetoken">➜</span> movies</button>
-					<div class="childcollapsecontent" style="display: block;">
+					<button type="button" class="collapsible child"><span class="collapsetoken">➜</span> movies</button>
+					<div class="childcollapsecontent">
 						<a href="https://letterboxd.com/mirenscene/film/oceans-eleven-2001/" target="_blank">
 							<figure>
 								<img src="./images/medialog/movies/o11.jpg">
@@ -224,6 +408,167 @@
 								</figcaption>
 							</figure>
 						</a>
+						<a href="https://letterboxd.com/mirenscene/film/crazy-rich-asians/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/cra.jpg">
+								<figcaption>
+									<b>crazy rich asians</b><br />
+									<b><i>watched:</i></b> 07/25/2025<br />
+									<b><i>rating:</i></b>⯪☆☆☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/the-social-network/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/tsn.jpg">
+								<figcaption>
+									<b>the social network</b><br />
+									<b><i>watched:</i></b> 07/31/2025<br />
+									<b><i>rating:</i></b>★★★★☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/the-sixth-sense/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/tss.jpg">
+								<figcaption>
+									<b>the sixth sense</b><br />
+									<b><i>watched:</i></b> 08/21/2025<br />
+									<b><i>rating:</i></b>★★★★★
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/unbreakable/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/ub.jpg">
+								<figcaption>
+									<b>unbreakable</b><br />
+									<b><i>watched:</i></b> 09/06/2025<br />
+									<b><i>rating:</i></b>★★★☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/signs/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/signs.jpg">
+								<figcaption>
+									<b>signs</b><br />
+									<b><i>watched:</i></b> 09/14/2025<br />
+									<b><i>rating:</i></b>★★⯪☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/the-village/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/tv.jpg">
+								<figcaption>
+									<b>the village</b><br />
+									<b><i>watched:</i></b> 09/22/2025<br />
+									<b><i>rating:</i></b>★★★☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/interstellar/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/is.jpg">
+								<figcaption>
+									<b>interstellar</b><br />
+									<b><i>watched:</i></b> 09/27/2025<br />
+									<b><i>rating:</i></b>★☆☆☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/lady-in-the-water/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/litw.jpg">
+								<figcaption>
+									<b>lady in the water</b><br />
+									<b><i>watched:</i></b> 10/20/2025<br />
+									<b><i>rating:</i></b>★★☆☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/bottoms/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/bottoms.jpg">
+								<figcaption>
+									<b>bottoms</b><br />
+									<b><i>watched:</i></b> 10/23/2025<br />
+									<b><i>rating:</i></b>★★★☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/about-my-father/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/amf.jpg">
+								<figcaption>
+									<b>about my father</b><br />
+									<b><i>watched:</i></b> 10/28/2025<br />
+									<b><i>rating:</i></b>★★☆☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/the-happening/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/th.jpg">
+								<figcaption>
+									<b>the happening</b><br />
+									<b><i>watched:</i></b> 11/18/2025<br />
+									<b><i>rating:</i></b>★☆☆☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/my-cousin-vinny/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/mcv.jpg">
+								<figcaption>
+									<b>my cousin vinny</b><br />
+									<b><i>watched:</i></b> 11/21/2025<br />
+									<b><i>rating:</i></b>★★★★⯪
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/after-earth/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/ae.jpg">
+								<figcaption>
+									<b>after earth</b><br />
+									<b><i>watched:</i></b> 11/24/2025<br />
+									<b><i>rating:</i></b>★★☆☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/wake-up-dead-man/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/wudm.jpg">
+								<figcaption>
+									<b>wake up dead man</b><br />
+									<b><i>watched:</i></b> 11/29/2025<br />
+									<b><i>rating:</i></b>★★★★☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/the-visit/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/tvisit.jpg">
+								<figcaption>
+									<b>the visit</b><br />
+									<b><i>watched:</i></b> 12/09/2025<br />
+									<b><i>rating:</i></b>★★★☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<a href="https://letterboxd.com/mirenscene/film/challengers/" target="_blank">
+							<figure>
+								<img src="./images/medialog/movies/tc.jpg">
+								<figcaption>
+									<b>challengers</b><br />
+									<b><i>watched:</i></b> 12/19/2025<br />
+									<b><i>rating:</i></b>★★★☆☆
+								</figcaption>
+							</figure>
+						</a>
+						<!-- last! -->
 					</div>
 				</div> 
 			</section>
