--- a/public/blinkies.html
+++ b/public/blinkies.html
@@ -38,6 +38,10 @@
         </div>
         <div>
           <p>
+            <a href="https://artwork.neocities.org/toybox" target="_blank"><img src="./images/blinkies/pochaccobyartwork.gif"></a>
+            <a href="https://lu.tiny-universes.net/index2.html" target="_blank"><img src="./images/blinkies/mario-toad.png"></a>
+            <a href="https://sweetcharm.net/.CuteDesktop/index.html" target="_blank"><img src="./images/blinkies/pochaccosweetcharm.png" height="100px"></a>
+            <br />
             <a href="https://petrapixel.neocities.org/about/blinkies" target="_blank"><img src="./images/blinkies/gaylove.gif"></a>
             <a href="https://jaysplace.neocities.org/graphics/blinkies" target="_blank"><img src="./images/blinkies/iluvcomp.gif"></a>
               <a href="https://jaysplace.neocities.org/graphics/blinkies" target="_blank"><img src="./images/blinkies/neocitiesuser.gif"></a>
@@ -45,6 +49,8 @@
               <a href="https://blinkiecollecti0n.neocities.org/" target="_blank"><img src="./images/blinkies/homoeroticsubtext.gif"></a>
               <a href="https://sydsblinkies.neocities.org/" target="_blank"><img src="./images/blinkies/neopets.gif"></a>
               <a href="https://sydsblinkies.neocities.org/" target="_blank"><img src="./images/blinkies/fairytype.gif"></a>
+              <a href="https://artwork.neocities.org/blinkies" target="_blank"><img src="./images/blinkies/blinkie-otgw.gif"></a>
+              <a href="https://artwork.neocities.org/blinkies" target="_blank"><img src="./images/blinkies/blinkie-community.gif"></a>
             <br />
             <a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="./images/blinkies/queercoded.png"></a>
             <a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="./images/blinkies/naptime.png"></a>
@@ -62,6 +68,10 @@
             <a href="https://echoesoftheend.neocities.org/" target="_blank"><img src="./images/blinkies/neil.png"></a>
             <a href="https://liseklucian.neocities.org/" target="_blank"><img src="./images/blinkies/garf.png"></a>
             <a href="https://thisdastampdoesnotexist.tumblr.com/post/687398367854297088/hehenot-hehepiendish-kitten-in-front-of-a" target="_blank"><img src="./images/blinkies/gamergender.png"></a>
+            <a href="https://sweetcharm.net/.CuteDesktop/index.html" target="_blank"><img src="./images/blinkies/pinkgameboy.gif"></a>
+            <a href="https://sweetcharm.net/.CuteDesktop/index.html" target="_blank"><img src="./images/blinkies/igascy.gif"></a>
+            <a href="https://thekittyburger.neocities.org/stamps" target="_blank"><img src="./images/blinkies/miffy1.png"></a>
+            <a href="https://thekittyburger.neocities.org/stamps" target="_blank"><img src="./images/blinkies/miffy2.png"></a>
             <br />
             <a href="https://cloudcover.neocities.org/digital/badges" target="_blank"><img src="./images/blinkies/gunch.png"></a>
           </p>
